--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -12,7 +12,7 @@
 <div class="col-md-3 sidebar">
 <div class="logo_sidebar">
 <h2 class="logo">
-<img class="img_logo_sidebar" src="">
+<img class="img_logo_sidebar" src={% static 'autenticacao/img/logo_nutri_lab.png'%}>
 </h2>
 </div>
 </div>
