--- a/templates/static/autenticacao/css/css.css
+++ b/templates/static/autenticacao/css/css.css
@@ -9,7 +9,7 @@
     width: 100%;
     }
     .sidebar{
-    background-image: url();
+    background-image: url("/static/autenticacao/img/fundo_background.png");
     }
     .area_cadastrar{
     margin-top: 8%;
