--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -51,7 +51,7 @@
 <br>
 <button class="btn-first">Registrar</button>
 </form>
-<h3 style="position: absolute; bottom: 50px; font-weight: bold">Já possui uma conta ?&nbsp <a class="btn btn-outline-success btn-lg">Logar</a> </h3>
+<h3 style="position: absolute; bottom: 50px; font-weight: bold">Já possui uma conta ?&nbsp <a href='{% url 'login'%}' class="btn btn-outline-success btn-lg">Logar</a> </h3>
 </div>
 </div>
 </div>
