--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -3,7 +3,7 @@
 {% block 'head' %}
 <link rel="stylesheet" href="{% static 'autenticacao/css/css.css' %}">
 {% endblock %}
-{% block 'titulo' %}Cadastre-se{% endblock %}
+{% block 'titulo' %}Login{% endblock %}
 {% block 'body' %}
 <div class="container-fluid">
 <div class="row">
